Modify block reordering using AJAX/JQuery. Modified modify_template_items.html and its corresponding javascript file (reorderUtils.js) to use same CSS styling rules as modify_block.html (i.e. I made the list of template items a set of divs instead of an ordered list. This is because it uses drop-down boxes instead of the numbering of the ordered list in modify_template_items.html).
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/trunk@11203 fdecad78-55fc-0310-b1b2-d7d25cf747c9